[gd_scene format=3 uid="uid://dui4vit2ddtpf"]

[ext_resource type="Script" uid="uid://dn5e35iuxag0n" path="res://Scenes/MainMenu/settings_menu.gd" id="1_1ioox"]

[node name="SettingsMenu" type="Control" unique_id=891001596]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ioox")

[node name="ColorRect" type="ColorRect" parent="." unique_id=270859401]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.70000005)

[node name="Panel" type="Panel" parent="." unique_id=370983609]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=975486750]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=40472677]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=814919109]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer" unique_id=594925435]
layout_mode = 2

[node name="DisplaySection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=940217151]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DisplaySectionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=869758390]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Display Settings"
horizontal_alignment = 1

[node name="DisplayModeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=213670614]
layout_mode = 2
text = "Display Mode:"

[node name="DisplayModeOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=454378280]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
tooltip_text = "Fullscreen, Windowed, or Borderless"

[node name="ResolutionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=774463030]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=1092811908]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
tooltip_text = "Screen Resolution-+"

[node name="VSyncLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=1222268380]
layout_mode = 2
text = "VSync"

[node name="VSyncCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/DisplaySection" unique_id=681256897]
layout_mode = 2
text = "Enabled"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer" unique_id=575635319]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=268099826]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioSectionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection" unique_id=2011741665]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Audio Settings"
horizontal_alignment = 1

[node name="MasterVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AudioSection" unique_id=452497332]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MasterVolumeContainer" unique_id=156980413]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume:"

[node name="MasterSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MasterVolumeContainer" unique_id=1556602165]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0

[node name="MasterValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MasterVolumeContainer" unique_id=948183225]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AudioSection" unique_id=1366824621]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MusicVolumeContainer" unique_id=370998343]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MusicVolumeContainer" unique_id=288990342]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 80.0

[node name="MusicValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MusicVolumeContainer" unique_id=132382931]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="SFXVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AudioSection" unique_id=1136156647]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/SFXVolumeContainer" unique_id=1782599650]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume:"

[node name="SFXSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/AudioSection/SFXVolumeContainer" unique_id=82277846]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0

[node name="SFXValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/SFXVolumeContainer" unique_id=291877835]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer" unique_id=1923481774]
layout_mode = 2

[node name="ButtonsSection" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=2026788982]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ApplyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsSection" unique_id=383018191]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Aplly"

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsSection" unique_id=597473687]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "Reset to Default"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsSection" unique_id=1166568845]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"
